factory function returning a parrot obj

--- a/index.html
+++ b/index.html
@@ -7,9 +7,85 @@
     <link rel="shortcut icon" href="./src/img/parrot.svg" type="image/x-icon">
     <title>Parrot Card Game</title>
     <link rel="stylesheet" href="./src/style/reset.css">
+    <link rel="stylesheet" href="./src/style/style.css">
+    <link rel="stylesheet" href="./src/style/cardsAnimation.css">
 </head>
 <body>
-    
+    <h1>PARROT CARD GAME</h1>
+    <main>
+        <div class="card">
+          <div class="front-face face">
+            <img src="./src/img/parrot.svg" alt="" srcset="">
+          </div>
+          <div class="back-face face">
+            Verso
+          </div>
+        </div>
+
+        <div class="card">
+            <div class="front-face face">
+              <img src="./src/img/parrot.svg" alt="" srcset="">
+            </div>
+            <div class="back-face face">
+              Verso
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="front-face face">
+              <img src="./src/img/parrot.svg" alt="" srcset="">
+            </div>
+            <div class="back-face face">
+              Verso
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="front-face face">
+              <img src="./src/img/parrot.svg" alt="" srcset="">
+            </div>
+            <div class="back-face face">
+              Verso
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="front-face face">
+              <img src="./src/img/parrot.svg" alt="" srcset="">
+            </div>
+            <div class="back-face face">
+              Verso
+            </div>
+          </div>
+          
+          <div class="card">
+            <div class="front-face face">
+              <img src="./src/img/parrot.svg" alt="" srcset="">
+            </div>
+            <div class="back-face face">
+              Verso
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="front-face face">
+              <img src="./src/img/parrot.svg" alt="" srcset="">
+            </div>
+            <div class="back-face face">
+              <img src="./src/img/parrot.svg" alt="" srcset="">
+
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="front-face face">
+              <img src="./src/img/parrot.svg" alt="" srcset="">
+            </div>
+            <div id="ass" class="back-face face">
+              <img src="./src/img/fiestaparrot.gif" alt="" srcset="">
+            </div>
+          </div>
+    </main>
 </body>
 <script src="./src/script/main.js"></script>
 </html>
