card element creator

--- a/index.html
+++ b/index.html
@@ -12,76 +12,7 @@
 </head>
 <body>
     <h1>PARROT CARD GAME</h1>
-    <main>
-        <div class="card">
-          <div class="front-face face">
-            <img src="./src/img/parrot.svg" alt="" srcset="">
-          </div>
-          <div class="back-face face">
-            Verso
-          </div>
-        </div>
-
-        <div class="card">
-            <div class="front-face face">
-              <img src="./src/img/parrot.svg" alt="" srcset="">
-            </div>
-            <div class="back-face face">
-              Verso
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="front-face face">
-              <img src="./src/img/parrot.svg" alt="" srcset="">
-            </div>
-            <div class="back-face face">
-              Verso
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="front-face face">
-              <img src="./src/img/parrot.svg" alt="" srcset="">
-            </div>
-            <div class="back-face face">
-              Verso
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="front-face face">
-              <img src="./src/img/parrot.svg" alt="" srcset="">
-            </div>
-            <div class="back-face face">
-              Verso
-            </div>
-          </div>
-          
-          <div class="card">
-            <div class="front-face face">
-              <img src="./src/img/parrot.svg" alt="" srcset="">
-            </div>
-            <div class="back-face face">
-              Verso
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="front-face face">
-              <img src="./src/img/parrot.svg" alt="" srcset="">
-            </div>
-            <div class="back-face face">
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="front-face face">
-              <img src="./src/img/parrot.svg" alt="" srcset="">
-            </div>
-            <div id="ass" class="back-face face">
-            </div>
-          </div>
+    <main id="gameCanva">
     </main>
 </body>
 <script src="./src/script/main.js"></script>
