--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
     <h1>PARROT CARD GAME</h1>
-    <main id="gameCanva">
+    <span data-test="timer" id="timer">-</span>
+    <main id="gameCanva" class="mobile-size">
     </main>
 </body>
 <script src="./src/script/main.js"></script>
